Fix layout bug in safari

--- a/ogo/static/src/ogo.scss
+++ b/ogo/static/src/ogo.scss
@@ -280,6 +280,7 @@ footer {
     }
 
     #footer-r-logo {
+        width: 100%;
         max-width: 40vw;
     }
 }
